--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,18 @@
-name: CI
+name: CI/CD
 
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
+
+env:
+  AZURE_CONTAINER_REGISTRY: ${{ secrets.AZURE_CONTAINER_REGISTRY }}
+  REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
+  REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
+  CONTAINER_APP_NAME: kulturarv-mcp-server
+  RESOURCE_GROUP: ${{ secrets.AZURE_RESOURCE_GROUP }}
+  IMAGE_NAME: kulturarv-mcp-server
 
 jobs:
   test:
@@ -24,30 +32,30 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
+        working-directory: ./MCP_server_for_apis
       
       - name: Run linting
-        run: |
-          ruff check src/ tests/
+        run: ruff check src/ tests/
+        working-directory: ./MCP_server_for_apis
       
       - name: Run type checking
-        run: |
-          mypy src/ --ignore-missing-imports
-        continue-on-error: true  # Don't fail on type errors for now
+        run: mypy src/ --ignore-missing-imports
+        working-directory: ./MCP_server_for_apis
+        continue-on-error: true
       
       - name: Run tests
-        run: |
-          pytest -v --cov=src --cov-report=xml --cov-report=term
-      
-      - name: Upload coverage
-        uses: codecov/codecov-action@v4
-        with:
-          files: ./coverage.xml
-          fail_ci_if_error: false
-        continue-on-error: true
+        run: pytest -v --cov=src --cov-report=xml --cov-report=term
+        working-directory: ./MCP_server_for_apis
 
-  docker:
+  build-and-push:
+    name: Build and Push to Azure Container Registry
     runs-on: ubuntu-latest
     needs: test
+    # Only build on push to main
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    
+    outputs:
+      image_tag: ${{ steps.meta.outputs.tags }}
     
     steps:
       - name: Checkout code
@@ -56,12 +64,49 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       
-      - name: Build Docker image
+      - name: Login to Azure Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.AZURE_CONTAINER_REGISTRY }}
+          username: ${{ env.REGISTRY_USERNAME }}
+          password: ${{ env.REGISTRY_PASSWORD }}
+      
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=sha,prefix=
+            type=raw,value=latest
+      
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: .
-          push: false
-          tags: kulturarv-mcp-server:test
+          context: ./MCP_server_for_apis
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+  deploy:
+    name: Deploy to Azure Container Apps
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      
+      - name: Deploy to Azure Container Apps
+        uses: azure/container-apps-deploy-action@v1
+        with:
+          resourceGroup: ${{ env.RESOURCE_GROUP }}
+          containerAppName: ${{ env.CONTAINER_APP_NAME }}
+          imageToDeploy: ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
