--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,26 +32,22 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
-        working-directory: ./MCP_server_for_apis
       
       - name: Run linting
         run: ruff check src/ tests/
-        working-directory: ./MCP_server_for_apis
+        continue-on-error: true
       
       - name: Run type checking
         run: mypy src/ --ignore-missing-imports
-        working-directory: ./MCP_server_for_apis
         continue-on-error: true
       
       - name: Run tests
         run: pytest -v --cov=src --cov-report=xml --cov-report=term
-        working-directory: ./MCP_server_for_apis
 
   build-and-push:
     name: Build and Push to Azure Container Registry
     runs-on: ubuntu-latest
     needs: test
-    # Only build on push to main
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
     outputs:
@@ -83,7 +79,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: ./MCP_server_for_apis
+          context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           cache-from: type=gha
