--- a/env.example
+++ b/env.example
@@ -1,9 +1,17 @@
 # Authentication (leave empty for open/dev mode)
+# Set this to require Bearer token authentication
 MCP_AUTH_TOKEN=
 
-# Rate limiting
+# OpenAI API key for chat agent (required for /api/chat endpoint)
+# Get your key from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=
+
+# Rate limiting (MCP endpoints)
 RATE_LIMIT_ENABLED=false
 RATE_LIMIT_PER_MINUTE=60
+
+# Rate limiting for chat endpoint (per IP, protects OpenAI costs)
+CHAT_RATE_LIMIT_PER_HOUR=50
 
 # Logging
 LOG_LEVEL=INFO
