--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "sse-starlette>=2.1.0",
     "tenacity>=9.0.0",
     "structlog>=24.4.0",
+    "openai>=1.50.0",
 ]
 
 [project.optional-dependencies]
