Add Azure OpenAI support - use Azure endpoint when configured

--- a/env.example
+++ b/env.example
@@ -3,8 +3,14 @@
 MCP_AUTH_TOKEN=
 
 # OpenAI API key for chat agent (required for /api/chat endpoint)
-# Get your key from: https://platform.openai.com/api-keys
+# Works with both OpenAI direct and Azure OpenAI
 OPENAI_API_KEY=
+
+# Azure OpenAI settings (optional - if set, uses Azure instead of OpenAI direct)
+# Get these from your Azure OpenAI resource in Azure Portal
+AZURE_OPENAI_ENDPOINT=
+AZURE_OPENAI_DEPLOYMENT=gpt-4o
+AZURE_OPENAI_API_VERSION=2024-02-15-preview
 
 # Rate limiting (MCP endpoints)
 RATE_LIMIT_ENABLED=false
