--- a/env.example
+++ b/env.example
@@ -10,6 +10,7 @@ OPENAI_API_KEY=
 # Get these from your Azure OpenAI resource in Azure Portal
 AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_DEPLOYMENT=gpt-4o
+AZURE_OPENAI_DEPLOYMENT_ROUTER=  # optional: router deployment name (defaults to deriving "gpt-4o-mini" from main or using same)
 AZURE_OPENAI_API_VERSION=2024-02-15-preview
 
 # Rate limiting (MCP endpoints)
